# hackathon-parser-module

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  compose.yml  pyproject.toml
app/: __init__.py  config.py  logger.py  main.py  models.py  parse.py  parsers.py
app/db/: __init__.py  crud.py  database.py  models.py
tests/: __init__.py  conftest.py  test_parsers.py
